--- a/illegal-buildings/index.html
+++ b/illegal-buildings/index.html
@@ -3,7 +3,7 @@
 <head>
   <title></title>
   <meta content="">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.min.css">
 </head>
 
 <body>
@@ -364,8 +364,8 @@
   </div>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="data.js"></script>
-  <script src="script.js"></script>
+  <script src="data.min.js"></script>
+  <script src="script.min.js"></script>
 </body>
 
 </html>
