norq-marash fixed

--- a/illegal-buildings/index.html
+++ b/illegal-buildings/index.html
@@ -216,6 +216,7 @@
           <g>
             <text transform="matrix(1 0 0 1 516.99 309.07)" class="st7 st3 st13">Նորք-</text>
             <text transform="matrix(1 0 0 1 560.82 309.07)" class="st7 st3 st13">Մարաշ</text>
+            <text class="number" transform="matrix(1 0 0 1 563.89 328.25)" class="st7 st5 st13">2</text>
           </g>
         </g>
         <g class="region" id="nor_norq">
