--- a/tests.html
+++ b/tests.html
@@ -7,7 +7,12 @@
 
 <body>
   <div class="container">
-    <iframe width="800" height="500" src="https://mediafactoryam.github.io/iframes-with-regions/illegal-buildings/" frameborder="0" style="overflow:none"></iframe>
+    <h1>Տեստային հոդված</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure cum velit soluta ea consectetur illum aspernatur numquam modi ad, quia optio similique ipsam voluptatibus rem eius explicabo molestiae in eos?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure cum velit soluta ea consectetur illum aspernatur numquam modi ad, quia optio similique ipsam voluptatibus rem eius explicabo molestiae in eos?</p>
+    <iframe width="800" height="500" src="/illegal-buildings/index.html" frameborder="0" style="overflow:none"></iframe>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure cum velit soluta ea consectetur illum aspernatur numquam modi ad, quia optio similique ipsam voluptatibus rem eius explicabo molestiae in eos?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure cum velit soluta ea consectetur illum aspernatur numquam modi ad, quia optio similique ipsam voluptatibus rem eius explicabo molestiae in eos?</p>
   </div>
 </body>
 
