--- a/tests.html
+++ b/tests.html
@@ -10,7 +10,7 @@
     <h1>Տեստային հոդված</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure cum velit soluta ea consectetur illum aspernatur numquam modi ad, quia optio similique ipsam voluptatibus rem eius explicabo molestiae in eos?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure cum velit soluta ea consectetur illum aspernatur numquam modi ad, quia optio similique ipsam voluptatibus rem eius explicabo molestiae in eos?</p>
-    <iframe width="800" height="500" src="/illegal-buildings/index.html" frameborder="0" style="overflow:none"></iframe>
+    <iframe width="800" height="500" src="https://mediafactoryam.github.io/iframes-with-regions/illegal-buildings/" frameborder="0" style="overflow:none"></iframe>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure cum velit soluta ea consectetur illum aspernatur numquam modi ad, quia optio similique ipsam voluptatibus rem eius explicabo molestiae in eos?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure cum velit soluta ea consectetur illum aspernatur numquam modi ad, quia optio similique ipsam voluptatibus rem eius explicabo molestiae in eos?</p>
   </div>
