change some styles

--- a/tests.html
+++ b/tests.html
@@ -8,11 +8,29 @@
 <body>
   <div class="container">
     <h1>Տեստային հոդված</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure cum velit soluta ea consectetur illum aspernatur numquam modi ad, quia optio similique ipsam voluptatibus rem eius explicabo molestiae in eos?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure cum velit soluta ea consectetur illum aspernatur numquam modi ad, quia optio similique ipsam voluptatibus rem eius explicabo molestiae in eos?</p>
-    <iframe class="map_iframe" width="100%"  src="https://mediafactoryam.github.io/iframes-with-regions/illegal-buildings/index.html" frameborder="0" style="overflow:none"></iframe>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure cum velit soluta ea consectetur illum aspernatur numquam modi ad, quia optio similique ipsam voluptatibus rem eius explicabo molestiae in eos?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure cum velit soluta ea consectetur illum aspernatur numquam modi ad, quia optio similique ipsam voluptatibus rem eius explicabo molestiae in eos?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure cum velit soluta ea consectetur illum aspernatur
+      numquam modi ad, quia optio similique ipsam voluptatibus rem eius explicabo molestiae in eos?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure cum velit soluta ea consectetur illum aspernatur
+      numquam modi ad, quia optio similique ipsam voluptatibus rem eius explicabo molestiae in eos?</p>
+    <style>
+      @media only screen and ( max-device-width: 900px) {
+        .map_iframe{
+          height:1400px;
+        }
+      }
+      @media only screen and (min-device-width: 901px) {
+        .map_iframe{
+          height:600px;
+        }
+      }
+    </style>
+    <iframe class="map_iframe"  width="100%"
+      src="/illegal-buildings/index.html" frameborder="0"
+      style="overflow:none"></iframe>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure cum velit soluta ea consectetur illum aspernatur
+      numquam modi ad, quia optio similique ipsam voluptatibus rem eius explicabo molestiae in eos?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure cum velit soluta ea consectetur illum aspernatur
+      numquam modi ad, quia optio similique ipsam voluptatibus rem eius explicabo molestiae in eos?</p>
   </div>
 </body>
 
