--- a/tests.html
+++ b/tests.html
@@ -25,7 +25,7 @@
     style="overflow:none"></iframe>`
       }
     </script>
-    <iframe width="100%" height="600"  src="https://mediafactoryam.github.io/iframes-with-regions/illegal-buildings/index.html" frameborder="0"
+    <iframe width="100%" height="600"  src="/illegal-buildings/index.html" frameborder="0"
     onload="this.style.height = (window.innerWidth < 981) ?  '1400px' :  '600px'" 
     style="overflow:none"></iframe>
     <!-- <iframe width="100%" height="1400" class="map_iframe2" src="https://mediafactoryam.github.io/iframes-with-regions/illegal-buildings/index.html" frameborder="0"
