--- a/illegal-buildings-en/index.html
+++ b/illegal-buildings-en/index.html
@@ -123,7 +123,7 @@ c0.5-3.7-0.3-5.1,1-8c0.6-1.5,1.8-3.4,1-5c-0.1-0.2-0.5-1-1-1c-1.2,0-1.1,4.2-3,5s-
   c-0.7,0.9-1,1.9-1,3c0,1,0.4,1.6,0,2s-1.2-0.1-2,0c-1.8,0.3-2.2,4.2-3,7c-1,3.9-2.7,7.7-5,11c1.3,2,3,3.7,5,5c1.3,0.8,2.6,1.4,4,2
   c3.4,1.8,3.7,5.4,6,11c3.4,8.3,6.9,10.8,9,17C24.3,174.9,25.2,177.8,26,181z" />
         <g>
-          <text transform="matrix(1 0 0 1 89.99 199.54)" class="st2 st3 st4">Աջափնյակ</text>
+          <text transform="matrix(1 0 0 1 89.99 199.54)" class="st2 st3 st4">Ajapniak</text>
           <text class="number" transform="matrix(1 0 0 1 138.49 225.12)" class="st2 st5 st4">17</text>
         </g>
       </g>
@@ -146,7 +146,7 @@ c0.5-3.7-0.3-5.1,1-8c0.6-1.5,1.8-3.4,1-5c-0.1-0.2-0.5-1-1-1c-1.2,0-1.1,4.2-3,5s-
   c-0.4-2.1-2.8-1.9-5-5c-1-1.4-0.6-1.7-2-4c-0.8-1.5-1.8-2.8-3-4c-4-4-8-3-8-3c-0.8,0.9-1.9,1.6-3,2
   C225.5,64.2,223.5,62.5,223.5,62.5z" />
         <g>
-          <text transform="matrix(1 0 0 1 298.38 129.4)" class="st7 st3 st4">Դավթաշեն</text>
+          <text transform="matrix(1 0 0 1 298.38 129.4)" class="st7 st3 st4">Davtashen</text>
           <text class="number" transform="matrix(1 0 0 1 351.41 154.98)" class="st7 st5 st4">6</text>
         </g>
       </g>
@@ -158,8 +158,8 @@ c0.5-3.7-0.3-5.1,1-8c0.6-1.5,1.8-3.4,1-5c-0.1-0.2-0.5-1-1-1c-1.2,0-1.1,4.2-3,5s-
   c2.5-7.3,4.9-8.1,7-13c5.2-12.2-5.3-17.7-1-31c1.5-4.5,6.2-14.7,12-19c2.2-1.5,4-3.5,5-6c0.8-2.3,0.3-3.2,1-5c1.4-3.6,5.7-4.5,9-6
   c8.1-3.8,12-16,12-16s-19.5,2.8-33,10c-45,24-66.6,39.7-74,49c-1.5,1.9-3,4-3,4S528.1,144.5,522.5,172.5z" />
         <g>
-          <text transform="matrix(1 0 0 1 517.52 199.9)" class="st7 st3 st9">Քանաքեռ</text>
-          <text transform="matrix(1 0 0 1 527.11 219.62)" class="st7 st3 st9">Զեյթուն</text>
+          <text transform="matrix(1 0 0 1 517.52 199.9)" class="st7 st3 st9">Kanaker</text>
+          <text transform="matrix(1 0 0 1 527.11 219.62)" class="st7 st3 st9">Zeytun</text>
           <text class="number" transform="matrix(1 0 0 1 549.23 239.34)" class="st7 st5 st9">10</text>
         </g>
       </g>
@@ -178,7 +178,7 @@ c0.5-3.7-0.3-5.1,1-8c0.6-1.5,1.8-3.4,1-5c-0.1-0.2-0.5-1-1-1c-1.2,0-1.1,4.2-3,5s-
   c-9.8,10.1-14,17-19,25c-1.3,2.1-4.3,1-7,3s-3.5,4.1-8,10c-2,2.7-2.8,3.5-4,5c-4.3,5.8-7.7,12.2-10,19
   C598.4,105,602,113,601.5,120.5z" />
         <g>
-          <text transform="matrix(1 0 0 1 628.57 133.71)" class="st7 st3 st4">Ավան</text>
+          <text transform="matrix(1 0 0 1 628.57 133.71)" class="st7 st3 st4">Avan</text>
           <text class="number" transform="matrix(1 0 0 1 654.42 159.3)" class="st7 st5 st4">9</text>
         </g>
       </g>
@@ -200,7 +200,7 @@ c0.5-3.7-0.3-5.1,1-8c0.6-1.5,1.8-3.4,1-5c-0.1-0.2-0.5-1-1-1c-1.2,0-1.1,4.2-3,5s-
   c-2.8,0.4-3,1.6-6,2C331.2,287.6,325.5,284.5,325.5,284.5z" />
         <g>
           <text transform="matrix(0.9996 -2.722377e-02 2.722377e-02 0.9996 379.34 358.9)"
-            class="st2 st3 st4">Կենտրոն</text>
+            class="st2 st3 st4">Kentron</text>
           <text class="number" transform="matrix(0.9996 -2.722377e-02 2.722377e-02 0.9996 418.4 383.43)"
             class="st2 st5 st4">26</text>
         </g>
@@ -214,8 +214,8 @@ c0.5-3.7-0.3-5.1,1-8c0.6-1.5,1.8-3.4,1-5c-0.1-0.2-0.5-1-1-1c-1.2,0-1.1,4.2-3,5s-
   l0.1-0.2c8-14,13-27,18-37c1.4-2.9-3-16-3-16c-4.9,1-10,1.3-15,1c-4.3-0.2-9.4-0.5-13-4c-3.8-3.7-3-8.3-7-10c-1-0.4-2.5-0.8-6,0
   c-8.4,2-9.6,6.5-16,9c-6.1,2.4-13,1.4-22,0C547,261.4,542.4,260.4,539,263z" />
         <g>
-          <text transform="matrix(1 0 0 1 516.99 309.07)" class="st7 st3 st13">Նորք-</text>
-          <text transform="matrix(1 0 0 1 560.82 309.07)" class="st7 st3 st13">Մարաշ</text>
+          <text transform="matrix(1 0 0 1 516.99 309.07)" class="st7 st3 st13">Nork-</text>
+          <text transform="matrix(1 0 0 1 560.82 309.07)" class="st7 st3 st13">Marash</text>
           <text class="number" transform="matrix(1 0 0 1 563.89 328.25)" class="st7 st5 st13">2</text>
         </g>
       </g>
@@ -231,7 +231,7 @@ c0.5-3.7-0.3-5.1,1-8c0.6-1.5,1.8-3.4,1-5c-0.1-0.2-0.5-1-1-1c-1.2,0-1.1,4.2-3,5s-
   c1.9-2,3.2-4.4,4-7c2.6-6.7,15.4-5.9,14-11c-5-18-9.2-24.4-26-63c-5.3-12.2-13-23-18-25c-7.1-2.8-14.9,4.3-18,1s1.6-12.7-1-14
   C679.7,181.3,678.1,183.5,675,183z" />
         <g>
-          <text transform="matrix(1 0 0 1 623.01 358.35)" class="st7 st3 st4">Նոր Նորք</text>
+          <text transform="matrix(1 0 0 1 623.01 358.35)" class="st7 st3 st4">Nor Nork</text>
           <text class="numbers" transform="matrix(1 0 0 1 660.06 383.93)" class="st7 st5 st4">12</text>
         </g>
       </g>
@@ -259,7 +259,7 @@ c0.5-3.7-0.3-5.1,1-8c0.6-1.5,1.8-3.4,1-5c-0.1-0.2-0.5-1-1-1c-1.2,0-1.1,4.2-3,5s-
   c-3.4,6.7-0.1,9.9-3,13c-3.7,4-13.2,2.7-19-1c-3.4-2.2-2.8-3.4-6-5c-6-2.9-9.5,0.6-15-2c-3.3-1.6-6.7-5-7-9s2.4-7.3,6-12
   c3.4-4.4,5-4.9,5-7C355,427,349.3,422.2,345,423z" />
         <g>
-          <text transform="matrix(1 0 0 1 218.53 615.04)" class="st7 st3 st4">Շենգավիթ</text>
+          <text transform="matrix(1 0 0 1 218.53 615.04)" class="st7 st3 st4">Shengavit</text>
           <text class="number" transform="matrix(1 0 0 1 263.84 640.62)" class="st7 st5 st4">13</text>
         </g>
       </g>
@@ -282,7 +282,7 @@ c0.5-3.7-0.3-5.1,1-8c0.6-1.5,1.8-3.4,1-5c-0.1-0.2-0.5-1-1-1c-1.2,0-1.1,4.2-3,5s-
   c-13.9-6.3-17.3-10.8-21-9c-3.6,1.8-1.9,6.6-6,9c-4.8,2.7-9.3-2.5-14,0c-5.1,2.7-3.1,10.5-7,12c-5.2,2-10.8-10.9-18-10
   c-6.8,0.9-5.7,13.2-16,21C466.9,459.3,449.4,457.4,447,452z" />
         <g>
-          <text transform="matrix(1 0 0 1 528.51 591.41)" class="st7 st3 st4">Էրեբունի</text>
+          <text transform="matrix(1 0 0 1 528.51 591.41)" class="st7 st3 st4">Erebuni</text>
           <text class="number" transform="matrix(1 0 0 1 565.82 616.99)" class="st7 st5 st4">10</text>
         </g>
       </g>
@@ -303,7 +303,7 @@ c0.5-3.7-0.3-5.1,1-8c0.6-1.5,1.8-3.4,1-5c-0.1-0.2-0.5-1-1-1c-1.2,0-1.1,4.2-3,5s-
   c-12.4,7.9-23.9,17.3-34,28c-2.8,3.1-4.1,4.8-7,7c-5.4,4.1-8.4,4-17,9c-5.9,3.4-4.9,3.7-8,5c-6.3,2.7-9.6,1.2-18,2
   C557.2,785.2,554.3,789.5,551,787z" />
         <g>
-          <text transform="matrix(1 0 0 1 499 829.61)" class="st7 st3 st4">Նուբարաշեն</text>
+          <text transform="matrix(1 0 0 1 499 829.61)" class="st7 st3 st4">Nubarashen</text>
           <text class="number" transform="matrix(1 0 0 1 559.49 855.2)" class="st7 st5 st4">2</text>
         </g>
       </g>
@@ -324,7 +324,7 @@ c0.5-3.7-0.3-5.1,1-8c0.6-1.5,1.8-3.4,1-5c-0.1-0.2-0.5-1-1-1c-1.2,0-1.1,4.2-3,5s-
   s-2.5,2.6-7,4c-2.6,0.9-3.1,0.1-5,1c-3.9,1.8-3.6,5.5-6,6c-3.1,0.7-4.5-5.6-10-7c-4.8-1.2-6,2.8-12,2c-5.2-0.7-6.9-4.1-11-3
   c-1.7,0.5-2.1,1.2-5,2c-3.2,0.8-3.8,0.1-5,1c-2.2,1.6-0.9,4.6-3,8C25.7,267.8,24,269.2,22,270z" />
         <g>
-          <text transform="matrix(1 0 0 1 79.36 367.85)" class="st2 st3 st4">Մալաթիա-Սեբաստիա</text>
+          <text transform="matrix(1 0 0 1 79.36 367.85)" class="st2 st3 st4">Malatya-Sebastia</text>
           <text class="number" transform="matrix(1 0 0 1 172.39 393.43)" class="st2 st5 st4">27</text>
         </g>
       </g>
@@ -351,7 +351,7 @@ c0.5-3.7-0.3-5.1,1-8c0.6-1.5,1.8-3.4,1-5c-0.1-0.2-0.5-1-1-1c-1.2,0-1.1,4.2-3,5s-
   c1.2,2.9,2.5,3.1,3,5c1,4-3.2,8.2-4,9c-2,2-3.4,2.4-7,6c-1.3,1.3-1.9,2.1-2,3c-0.2,1.4,0.9,2.2,2,4c1.1,1.8,1.8,3.9,2,6
   c-4.5,3.1-5.3,4.4-5,5c0.4,1,3.6,0.4,8,0C338.3,276.6,342.7,276.6,347,277z" />
         <g>
-          <text transform="matrix(1 0 0 1 392 187.65)" class="st7 st3 st4">Արաբկիր</text>
+          <text transform="matrix(1 0 0 1 392 187.65)" class="st7 st3 st4">Arabkir</text>
           <text class="number" transform="matrix(1 0 0 1 431.44 213.23)" class="st7 st5 st4">16</text>
         </g>
       </g>
@@ -359,7 +359,7 @@ c0.5-3.7-0.3-5.1,1-8c0.6-1.5,1.8-3.4,1-5c-0.1-0.2-0.5-1-1-1c-1.2,0-1.1,4.2-3,5s-
 
     </div>
     <div class="text-container">
-      <h2 id="title">Կենտրոն</h2>
+      <h2 id="title">Kentron</h2>
       <div id="texts"></div>
     </div>
   </div>
